hphp/hack/test/extracted_from_manual/10-types/81-recursive-case-types-02.hack.exp
ERROR: File "81-recursive-case-types-02.hack", line 4, characters 11-11:
This recursive case type is not supported. `A` should not be at the top-level. (Typing[4485])
ERROR: File "81-recursive-case-types-02.hack", line 7, characters 11-11:
This recursive case type is not supported. `B` should not be at the top-level. (Typing[4485])
