hphp/hack/test/extracted_from_manual/10-types/81-recursive-case-types-02.hack
// @generated by hh_manual from manual/hack/10-types/81-recursive-case-types.md
// @codegen-command : buck run fbcode//hphp/hack/src/hh_manual:hh_manual extract fbcode/hphp/hack/manual/hack/
// Bare self-reference
case type A = A;

// Nullable is not a type constructor
case type B = ?B;
